# fastapi-boilerplate-best

./: .flake8  docker-compose.yml  env.py  pyproject.toml  render.yaml
app/: config.py  main.py  utils.py
app/audio/: service.py
app/audio/adapters/: LangChain.py  gpt_api.py  parser.py  s3_service.py  speecher.py
app/audio/repository/: repository.py
app/audio/router/: router_get_analysis_by_reglament.py  router_get_speech_to_text.py  router_get_technical_analysis.py  router_speech_to_text.py  router_update_speech_to_text.py
app/audio/source/: inform_about_kaspi.py  prompt.py
vectordb/: index.faiss  index.pkl
